--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">@color/colorAzul</color>
     <color name="colorAzul">#0F7EDD</color>
     <color name="colorAzulDark">#0A467C</color>
+    <color name="pink">#E0245E</color>
 </resources>
