--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.jmonzon.minitwitter.ui.TweetFragment"
+        android:name="com.jmonzon.minitwitter.ui.ui.tweetList.TweetListFragment"
         tools:layout="@layout/fragment_tweet_list" />
 
     <fragment
         android:id="@+id/navigation_tweet_like"
-        android:name="com.jmonzon.minitwitter.ui.ui.dashboard.DashboardFragment"
-        tools:layout="@layout/fragment_dashboard" />
+        android:name="com.jmonzon.minitwitter.ui.ui.home.HomeFragment"
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_profile"
