--- a/app/src/main/res/layout/fragment_new_tweet_full_dialog.xml
+++ b/app/src/main/res/layout/fragment_new_tweet_full_dialog.xml
@@ -50,6 +50,7 @@
         android:hint="@string/text_message_tweet"
         android:inputType="textMultiLine"
         android:paddingTop="8dp"
+        android:textColor="@android:color/black"
         android:textColorHighlight="@color/colorAzul"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="18sp"
