--- a/app/src/main/res/layout/fragment_tweet.xml
+++ b/app/src/main/res/layout/fragment_tweet.xml
@@ -8,6 +8,7 @@
     android:padding="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageViewAvatar"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -17,7 +18,7 @@
         android:paddingBottom="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_logo_minituiter_mini" />
+        android:src="@drawable/ic_logo_minituiter_mini" />
 
     <TextView
         android:id="@+id/textViewUsername"
