--- a/app/src/main/res/layout/fragment_tweet_list.xml
+++ b/app/src/main/res/layout/fragment_tweet_list.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.jmonzon.minitwitter.TweetFragment"
+    android:id="@+id/swiperefreshlayout"
+    android:name="com.jmonzon.minitwitter.TweetListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="0dp"
-    android:layout_marginRight="0dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.ui.tweetList.TweetListFragment"
-    tools:listitem="@layout/fragment_tweet" />
+    tools:context=".ui.ui.tweetList.TweetListFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/fragment_tweet" />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
