Añadimos funcionalidad para mostrar vista con los tweet favoritos, además si eliminas uno desde esa vista se actualiza automáticamente

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,12 +8,22 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.jmonzon.minitwitter.ui.ui.tweetList.TweetListFragment"
-        tools:layout="@layout/fragment_tweet_list" />
+        tools:layout="@layout/fragment_tweet_list">
+        <argument
+            android:name="TWEET_LIST_TYPE"
+            android:defaultValue="1"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_tweet_like"
-        android:name="com.jmonzon.minitwitter.ui.ui.home.HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.jmonzon.minitwitter.ui.ui.tweetList.TweetListFragment"
+        tools:layout="@layout/fragment_tweet_list">
+        <argument
+            android:name="TWEET_LIST_TYPE"
+            android:defaultValue="2"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
