--- a/app/src/main/res/layout/botton_modal_tweet_fragment.xml
+++ b/app/src/main/res/layout/botton_modal_tweet_fragment.xml
@@ -6,18 +6,17 @@
     android:layout_height="wrap_content"
     tools:context=".ui.ui.BottonModalTweetFragment">
 
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationViewBottonTweet"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/navigation_view_dialog_tweet"/>
+        app:layout_constraintVertical_bias="0.0"
+        app:menu="@menu/navigation_view_dialog_tweet" />
 </androidx.constraintlayout.widget.ConstraintLayout>
