--- a/app/src/main/res/menu/navigation_view_dialog_tweet.xml
+++ b/app/src/main/res/menu/navigation_view_dialog_tweet.xml
@@ -3,7 +3,7 @@
     <group android:checkableBehavior="none">
         <item
             android:id="@+id/actionDeleteTweet"
-            android:icon="@drawable/ic_delete_red_24dp"
+            android:icon="@drawable/ic_delete24dp"
             android:title="@string/delete_tweet_btn"/>
     </group>
 </menu>
