Refactorizamos recolocando archivos y estructurando el proyecto

--- a/app/src/main/res/layout/botton_modal_tweet_fragment.xml
+++ b/app/src/main/res/layout/botton_modal_tweet_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.ui.BottonModalTweetFragment">
+    tools:context=".ui.dashboard.BottonModalTweetFragment">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationViewBottonTweet"
