--- a/app/src/main/res/layout/fragment_tweet_list.xml
+++ b/app/src/main/res/layout/fragment_tweet_list.xml
@@ -6,7 +6,7 @@
     android:name="com.jmonzon.minitwitter.TweetListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui.tweetList.TweetListFragment">
+    tools:context=".ui.dashboard.tweetList.TweetListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
