Cambiamos la propiedad background del botón por backgroundTint

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/white"
+        android:backgroundTintMode="@android:color/white"
         android:text="@string/btn_login"
         android:textColor="@color/colorAzul"
         app:layout_constraintBottom_toTopOf="@+id/textViewSignUp"
