--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -37,6 +37,8 @@
                         android:id="@+id/imageViewToolbarPhoto"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
+                        app:civ_border_color="@android:color/black"
+                        app:civ_border_width="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
